@@ -1,6 +1,8 @@
 package com.example.linkcargo.domain.schedule.dto.response;
 
 import com.example.linkcargo.domain.schedule.Schedule;
+import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 import lombok.Builder;
 import org.springframework.data.domain.Page;
 
@@ -13,10 +15,14 @@ public record ScheduleListResponse(
         int totalPages,
         long totalElements
 ) {
-    public static ScheduleListResponse fromEntity(Page<Schedule> schedulePage) {
-        List<ScheduleInfoResponse> scheduleResponses = schedulePage.getContent().stream()
-                .map(ScheduleInfoResponse::fromEntity)
-                .toList();
+    public static ScheduleListResponse fromEntity(Page<Schedule> schedulePage, List<String> imageUrls) {
+        List<ScheduleInfoResponse> scheduleResponses = IntStream.range(0, schedulePage.getContent().size())
+            .mapToObj(i -> {
+                Schedule schedule = schedulePage.getContent().get(i);
+                String imageUrl = imageUrls.get(i % imageUrls.size());
+                return ScheduleInfoResponse.fromEntity(schedule, imageUrl);
+            })
+            .collect(Collectors.toList());
 
         return ScheduleListResponse.builder()
                 .schedules(scheduleResponses)
